[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu/YouDiedButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu/MenuButton.gd" type="Script" id=2]
[ext_resource path="res://Died.gd" type="Script" id=3]
[ext_resource path="res://BlackOverlay.gd" type="Script" id=4]
[ext_resource path="res://Menu/MenuDiedButton.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=51]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Died" type="Control"]
pause_mode = 2
visible = false
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.345098 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 90.0

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 320.0
margin_bottom = 90.0
rect_min_size = Vector2( 320, 90 )
focus_mode = 0
mouse_filter = 2
enabled_focus_mode = 0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_top = 94.0
margin_right = 320.0
margin_bottom = 184.0
rect_min_size = Vector2( 320, 90 )
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlackOverlay"]
anims/fade_in = SubResource( 51 )
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="fade_finished1" from="BlackOverlay" to="." method="_on_BlackOverlay_fade_finished1"]
[connection signal="animation_finished" from="BlackOverlay/AnimationPlayer" to="BlackOverlay" method="_on_AnimationPlayer_animation_finished"]
